<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeFlow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="timeTrial">Time Trial</string>
    <string name="highScores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="title_activity_grid_picker">GridPickerActivity</string>
    <string name="title_activity_time_trial_picker">TimeTrialPickerActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="reset">Reset</string>
    <string name="nextPuzzle">Next puzzle</string>
    <string name="quit">Quit</string>
    <string name="solveAgain">Solve again</string>
    <string name="next">>></string>
    <string name="previous">&lt;&lt;</string>
    <string name="checkmark">&#x2713;</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_time_trial">TimeTrialActivity</string>

</resources>
