<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:id="@+id/frontText"
        android:textColor="@color/darkRed"
        android:layout_weight="0.23" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/play"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/timeTrialButton"
        android:text="@string/timeTrial"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/highScoresButton"
        android:text="@string/highScores"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/settingsButton"
        android:text="@string/settings"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_weight="0.10" />
</LinearLayout>